css/style.css
:root{
    --color-yellow: hsl(47, 88%, 63%);
    --color-white: hsl(0, 0%, 100%);
    --color-gray-500: hsl(0, 0%, 42%);
    --color-gray-950: hsl(0, 0%, 7%);
    --color-blue: hsl(228, 45%, 44%);
}

*,
*::before,
*::after {
    box-sizing: border-box;
}

body {
    background-color: var(--color-yellow);
    padding: 5rem;
    font-size: 1rem;
    font-family: "Figtree", sans-serif;
}

.attribution { 
    font-size: 0.6875rem; 
    text-align: center; 
    margin-block-start: 1rem;
}
.attribution a { 
    color: var(--color-blue); 
}

.wrapper{
    width: min(25rem, 100%);
    margin: 0 auto;
    display: grid;
    background-color: var(--color-white);
    padding : 1rem;
    border-radius: 1.2rem;
    box-shadow: 6px 6px 0px var(--color-gray-950);
    border: 1px solid var(--color-gray-950);
    
}

.wrapper div:first-child img{
    width: 100%;
    border-radius: 0.7rem;
}

.wrapper div:nth-child(2) h2{
    background-color: var(--color-yellow);
    display: inline-block;
    padding: 0.5rem 0.8rem;
    border-radius: 0.3rem;
    font-size: 1rem;
}

.line h1{
    font-size: clamp(1.25rem, 2vw, 1.5rem);
    margin-block-start: 0.5rem;
    margin-block-end: 0.5rem;
    font-weight: 800;
}


.line h1:hover{
    color: var(--color-yellow);
    cursor: pointer;
}

.wrapper div:nth-child(2) p{
    font-size: 0.9rem;
    line-height: 1.5rem;
    margin-block-start: 0.1rem;
}


.highlight{
    color:var(--color-gray-500);
}

.author-avatar{
    width: 2.2rem;
    border-radius: 50%;
}
ul{
    list-style: none;
    padding: 0;
    display: flex;
    gap: 0.8rem;
    align-items: center;
    font-weight: 800;
}

